--- a/package.json
+++ b/package.json
@@ -31,7 +31,11 @@
   },
   "homepage": "https://github.com/kaplas/github-image-uploader#readme",
   "dependencies": {
+    "bluebird": "^3.0.6",
     "express": "^4.13.3",
-    "formidable": "^1.0.17"
+    "formidable": "^1.0.17",
+    "lodash": "^3.10.1",
+    "request": "^2.67.0",
+    "slug": "^0.9.1"
   }
 }
