Image processing works

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "^4.13.3",
     "formidable": "^1.0.17",
     "lodash": "^3.10.1",
+    "lwip": "0.0.8",
     "request": "^2.67.0",
     "slug": "^0.9.1"
   }
