--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "formidable": "^1.0.17",
     "lodash": "^3.10.1",
     "lwip": "0.0.8",
+    "mustache-express": "^1.2.1",
     "request": "^2.67.0",
     "slug": "^0.9.1"
   }
