--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "homepage": "https://github.com/kaplas/github-image-uploader#readme",
   "dependencies": {
+    "basic-auth": "^1.0.3",
     "bluebird": "^3.0.6",
     "express": "^4.13.3",
     "formidable": "^1.0.17",
